--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<img src="./images/DSC_0006.JPG" alt="" />
+	<!--<img src="./images/DSC_0006.JPG" alt="" />-->
 </body>
 
 </html>
